<resources>
    <string name="app_name">Examify</string>
    <string name="student_id">Student ID</string>
    <string name="password">Password</string>
    <string name="sign_in_student">Sign In</string>
    <string name="home_nav">Home</string>
    <string name="history_nav">History</string>
    <string name="teacher_nav">Teacher</string>
    <string name="secure_nav">Secure</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="examify_teacher">Examify Teacher</string>
    <string name="teacher_id">Teacher ID</string>
    <string name="float_des">Add Exam Content</string>
    <string name="subject">Subject</string>
    <string name="title">Title</string>
    <string name="exam_id">Exam ID</string>
    <string name="enter">Enter</string>
</resources>